# VISTA

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.docker.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fullscreen.patch  install-first-time-only.sh  pgadmin-servers.json.example  ps_launch_postgres_minio.ps1  pyproject.toml  pytest.ini  requirements.txt  short-cut-launch-postgres-minio.bash  short-cut-launch-postgres-minio.sh
.archived/: agent_start.sh
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  copilot-instructions.md
backend/: alembic.ini  conftest.py  main.py  mcp_server.py  ps_run.ps1  run.sh
deployment-test/: README.md  app.yaml  configmap.yaml  minio.yaml  postgres.yaml  secret.yaml
docs/: admin-guide.md  api-ml-guide.md  database-schema.txt  dev-vs-prod-comparison.md  developer-guide.md  mcp-integration-guide.md  mcp-server.md  system-architecture-report.md  user-guide.md
examples/: README.md  mcp_client_example.py
frontend/: .gitignore  config-overrides.js  install.sh  package-lock.json  package.json  playwright.config.js  ps_run.ps1  remove-emojis-simple.ps1  remove-emojis.ps1  run.sh
scripts/: README.md  README_YOLOV8.md  agent_setup.sh  clear_ml_queue.md  clear_ml_queue.py  debug_heatmap_annotations.py  dev.ps1  dev.ps1.tests.ps1  dev.sh  heatmap_ml_pipeline.py  heatmap_ml_requirements.txt  launch_postgres_minio.ps1  launch_postgres_minio.sh  ml_requirements.txt  run_clear_ml_queue.sh  run_heatmap_pipeline.sh  tail-logs.sh  (+4 more)
(+308 files in other folders)
